--- a/豆瓣电影.html
+++ b/豆瓣电影.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -266,7 +266,7 @@
                 _this.isLoading = true
                 _this.$element.find('.loading').show()
                 $.ajax({
-                    url: 'http://api.douban.com/v2/movie/top250',
+                    url: 'https://api.douban.com/v2/movie/top250',
                     data: {
                         start: _this.index || 0
                     },
@@ -311,7 +311,7 @@
                 var _this = this
                 _this.$element.find('.loading').show()
                 $.ajax({
-                    url: 'http://api.douban.com/v2/movie/us_box',
+                    url: 'https://api.douban.com/v2/movie/us_box',
                     dataType: 'jsonp'
                 }).done(function(ret) {
                     callback&&callback(ret)
@@ -352,7 +352,7 @@
                 var _this = this
                 _this.$element.find('.loading').show()
                 $.ajax({
-                    url: 'http://api.douban.com/v2/movie/search',
+                    url: 'https://api.douban.com/v2/movie/search',
                     data: {
                         q: keyword
                     },
